# nu.v

./: Cargo.toml  flake.nix  graph.dot
assets/: get-flake-output-drvs-paths.nix
src/: dependency_checker.rs  dependency_map.rs  flake_types.rs  graph.rs  main.rs  nix_cli.rs
