[package]
name = "nix2ci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
dot-parser = { version = "0.3.0", features = ["petgraph"] }
file-lock = "2.1.10"
petgraph = "0.6.5"
rayon = "1.10.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.34"
